commiting submodules before moving

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "dependencies/variant"]
-	path = dependencies/variant
+[submodule "dependencies/mpark_variant"]
+	path = dependencies/mpark_variant
 	url = ssh://git@xcp-stash.lanl.gov:7999/mpark/variant.git
 [submodule "dependencies/shacl"]
 	path = dependencies/shacl
