narrowed hana inclusion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,7 +99,8 @@ if(NOT subproject)
   set(CPACK_PACKAGE_VENDOR "Los Alamos National Laboratory")
   set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
   set(CMAKE_PROJECT_HOMEPAGE_URL "https://xcp-stash.lanl.gov/projects/SCL/repos/variant")
-  set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A library providing recursive descent parser combinators")
+  set(CPACK_PACKAGE_DESCRIPTION_SUMMARY
+    "Utilities for (and optional C++14 backport of) std::variant")
   set(CPACK_PACKAGE_CONTACT "amccartney@lanl.gov")
   include(CPack)
 endif()
