update target sources for CMP0076

--- a/src/shacl/variant/detail/CMakeLists.txt
+++ b/src/shacl/variant/detail/CMakeLists.txt
@@ -1,32 +1,30 @@
 target_sources(variant INTERFACE
-  $<BUILD_INTERFACE:
-    ${CMAKE_CURRENT_LIST_DIR}/alternatives_of.hpp
-    ${CMAKE_CURRENT_LIST_DIR}/arguments_of.hpp
-    ${CMAKE_CURRENT_LIST_DIR}/argument_type_product.hpp
-    ${CMAKE_CURRENT_LIST_DIR}/construct.hpp
-    ${CMAKE_CURRENT_LIST_DIR}/Curry.hpp
-    ${CMAKE_CURRENT_LIST_DIR}/decay.hpp
-    ${CMAKE_CURRENT_LIST_DIR}/demux.hpp
-    ${CMAKE_CURRENT_LIST_DIR}/invoke.hpp
-    ${CMAKE_CURRENT_LIST_DIR}/is_constructible.hpp
-    ${CMAKE_CURRENT_LIST_DIR}/possible_result_types_of.hpp
-    ${CMAKE_CURRENT_LIST_DIR}/sfinae.hpp
-    ${CMAKE_CURRENT_LIST_DIR}/sum.hpp
-    ${CMAKE_CURRENT_LIST_DIR}/to_variant.hpp>
-  $<INSTALL_INTERFACE:
-    include/shacl/variant/detail/alternatives_of.hpp
-    include/shacl/variant/detail/arguments_of.hpp
-    include/shacl/variant/detail/argument_type_product.hpp
-    include/shacl/variant/detail/construct.hpp
-    include/shacl/variant/detail/Curry.hpp
-    include/shacl/variant/detail/decay.hpp
-    include/shacl/variant/detail/demux.hpp
-    include/shacl/variant/detail/invoke.hpp
-    include/shacl/variant/detail/is_constructible.hpp
-    include/shacl/variant/detail/possible_result_types_of.hpp
-    include/shacl/variant/detail/sfinae.hpp
-    include/shacl/variant/detail/sum.hpp
-    include/shacl/variant/detail/to_variant.hpp>)
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/alternatives_of.hpp>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/arguments_of.hpp>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/argument_type_product.hpp>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/construct.hpp>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/Curry.hpp>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/decay.hpp>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/demux.hpp>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/invoke.hpp>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/is_constructible.hpp>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/possible_result_types_of.hpp>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sfinae.hpp>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sum.hpp>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/to_variant.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/alternatives_of.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/arguments_of.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/argument_type_product.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/construct.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/Curry.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/decay.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/demux.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/invoke.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/is_constructible.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/possible_result_types_of.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/sfinae.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/sum.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/to_variant.hpp>)
 
 add_subdirectory(sfinae)
 
