--- a/src/shacl/variant/detail/sfinae/CMakeLists.txt
+++ b/src/shacl/variant/detail/sfinae/CMakeLists.txt
@@ -1,11 +1,9 @@
 target_sources(variant INTERFACE
-  $<BUILD_INTERFACE:
-    ${CMAKE_CURRENT_LIST_DIR}/partial.hpp
-    ${CMAKE_CURRENT_LIST_DIR}/reverse_partial.hpp
-    ${CMAKE_CURRENT_LIST_DIR}/transform.hpp
-    ${CMAKE_CURRENT_LIST_DIR}/unpack.hpp>
-  $<INSTALL_INTERFACE:
-    include/shacl/variant/detail/sfinae/partial.hpp
-    include/shacl/variant/detail/sfinae/reverse_partial.hpp
-    include/shacl/variant/detail/sfinae/transform.hpp
-    include/shacl/variant/detail/sfinae/unpack.hpp>)
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/partial.hpp>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/reverse_partial.hpp>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/transform.hpp>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/unpack.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/sfinae/partial.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/sfinae/reverse_partial.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/sfinae/transform.hpp>
+  $<INSTALL_INTERFACE:include/shacl/variant/detail/sfinae/unpack.hpp>)
